--- a/said-css.css
+++ b/said-css.css
@@ -6,6 +6,7 @@
     text-align: center;
     padding: 5px;
     border-radius: 15%;
+    box-shadow: 0px 4px 1px 1px #ddd;
 }
 
 section {
@@ -70,6 +71,7 @@ a{
 }
 .clube img {
     width: 66%;
+    border-radius: 15%;
 }
 
 @media screen and (max-width: 640px){
