--- a/said-css.css
+++ b/said-css.css
@@ -41,7 +41,7 @@ section {
     text-decoration: none;
     padding: 0 10px;
     transition: 0.4s;
-    font-family: 'Roboto';
+    font-family: 'Montserrat';
     
 
 }
